--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.2"
+    "@whiskeysockets/baileys": "^7.0.0-rc.2",
+    "dotenv": "^17.2.2",
+    "qrcode-terminal": "^0.12.0"
   }
 }
